@@ -53,6 +53,14 @@
   <!-- Generated by  http://apps-xdgapp.rhcloud.com/oars -->
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="50~beta" date="2026-01-31" type="development">
+      <description>
+        <ul>
+          <li>Updated translations</li>
+          <li>Updated help URL (Sabri Ünal)</li>
+        </ul>
+      </description>
+    </release>
     <release version="48.1" date="2025-04-12" type="stable">
       <description>
         <ul>
