@@ -1,3 +1,9 @@
+Lights Off 50.beta
+==================
+
+* Updated translations
+* Updated help URL (Sabri Ünal)
+
 Lights Off 48.1
 ==================
 
